top carousel fixed, bottom carousel stuck

--- a/frontend/src/assets/styles/css/about.css
+++ b/frontend/src/assets/styles/css/about.css
@@ -1,3 +1,10 @@
+.carousel-pic {
+  object-fit: cover;
+  position: relative;
+  width: 350px;
+  height: 350px;
+}
+
 .home-opener {
   font-size: 30px;
   font-weight: bold;
